[package]
name = "futmio"
description = "A thin Futures layer around Mio"
license = "Apache-2.0 OR MIT"
keywords = ["async", "futures", "networking", "mio", "events"]
version = "0.0.1"
authors = ["Khionu Sybiern <dev@khionu.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
log = "0.4.8"
mio = { git = "https://github.com/tokio-rs/mio.git", features = ["os-poll", "tcp", "udp"] }

[dev-dependencies]
env_logger = "0.7.1"
